--- a/packages/firebase_auth/firebase_auth_desktop/pubspec.yaml
+++ b/packages/firebase_auth/firebase_auth_desktop/pubspec.yaml
@@ -12,7 +12,10 @@ dependencies:
   desktop_webview_auth: ^0.0.9
   firebase_auth: ^4.1.1
   firebase_auth_dart: 
-    path: ../firebase_auth_dart
+    git: 
+      url: git@github.com:NirmalAriyathilake/flutterfire_desktop.git
+      ref: tenant_id_fix
+      path: packages\firebase_auth\firebase_auth_dart
   firebase_auth_platform_interface: ^6.5.2
   firebase_core: ^2.1.1
   firebase_core_dart: ^1.0.1
